@@ -49,7 +49,7 @@
                 ++lConnNum;
                 socket.send('{"stdout":"client connected"}');
                 
-                Util.log('server connected');
+                log(lConnNum, 'connected');
                 
                 if(!OnMessageFuncs[lConnNum])
                     OnMessageFuncs[lConnNum] = onMessage(lConnNum, socket);
@@ -57,12 +57,26 @@
                 lConn_func = OnMessageFuncs[lConnNum];
                 
                 socket.on('message', lConn_func);
+                socket.on('disconnect', Util.call(disconnect, lConnNum));
                 
             });
         }
         
         return lRet;
     };
+    
+    function disconnect(pParams){
+        var lConnNum, lRet = Util.checkObj(pParams, ['params']);
+        
+        if(lRet) {
+            lConnNum = pParams.params;
+            OnMessageFuncs  [lConnNum]  =
+            ClientFuncs     [lConnNum]  = null;
+            
+            log(lConnNum, 'disconnected');
+        }
+        
+    }
     
     /**
      * function gets onMessage function 
@@ -74,7 +88,7 @@
         return function(pCommand) {
             var lMsg, lWinCommand, lExec_func;
             
-            Util.log(pCommand);
+            Util.log('#' + pConnNum + ': ' + pCommand);
             
             if( Util.isContainStrAtBegin(pCommand, 'cloudcmd') ){
                 pCommand = Util.removeStr(pCommand, 'cloudcmd');
@@ -118,7 +132,7 @@
             }
             
             if(!ClientFuncs[pConnNum])
-                ClientFuncs[pConnNum] = getExec(pSocket);
+                ClientFuncs[pConnNum] = getExec(pSocket, pConnNum);
             
             lExec_func = ClientFuncs[pConnNum];
             
@@ -131,7 +145,7 @@
      * function send result of command to client
      * @param pSocket
      */
-    function getExec(pSocket){
+    function getExec(pSocket, pConnNum){
         return function(pError, pStdout, pStderr) {
             var lExec       = {
                     stdout : pStdout,
@@ -140,11 +154,22 @@
                 
                 lExec_str   = JSON.stringify(lExec);
             
-            if (pError) {
-                Util.log('exec error: ' + pError);
-            }
+            log(pConnNum, pError, 'error');
+            log(pConnNum, pStderr, 'stderror');
             
             pSocket.send(lExec_str);
         };
+    }
+    
+    function log(pConnNum, pStr, pType){
+        var lType = ' ';
+        
+        if (pStr) {
+            
+            if (pType)
+                lType += pType + ':';
+            
+            Util.log('#' + pConnNum + lType + pStr);
+        }
     }
 })();
